syntax = "proto3";

package codehorse.mpaas.sc;

option go_package = "github.com/solodba/devcloud/mpaas/apps/sc";

// 导入外部包
import "apps/sc/pb/sc.proto";

// StorageClass相关功能接口
service RPC {
    // 创建StorageClass
    rpc CreateSC(CreateSCRequest) returns(SC);
    // 删除StorageClass
    rpc DeleteSC(DeleteSCRequest) returns(SC);
    // 查询StorageClass集合
    rpc QuerySC(QuerySCRequest) returns(SCSet);
}

// DeleteSCRequest结构体
message DeleteSCRequest {
    // gotags: bson:"name" json:"name"
    string Name = 1;
}

// QuerySCRequest结构体
message QuerySCRequest {
    // gotags: bson:"keyword" json:"keyword"
    string Keyword = 1;
}